--- a/core/templates/core/pasien_edit.html
+++ b/core/templates/core/pasien_edit.html
@@ -81,23 +81,13 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Nama Lengkap -->
+                        <!-- Nama Lengkap & NIK-->
                         <div class="row">
                             <!-- Nama Lengkap -->
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="nama_lengkap" class="form-control-label">Nama Lengkap <span class="text-danger">*</span></label>
                                     <input type="text" class="form-control" id="nama_lengkap" name="nama_lengkap" value="{{ pasien.nama_lengkap }}" placeholder="Masukkan nama lengkap" required>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- No. RM & NIK-->
-                        <div class="row">
-                            <!-- No. RM -->
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="no_rm" class="form-control-label">No. Rekam Medis <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" id="no_rm" name="no_rm" value="{{ pasien.no_rm }}" placeholder="Masukkan No. RM" required>
                                 </div>
                             </div>
                             <!-- NIK -->
@@ -130,8 +120,9 @@
                                     <label for="jenis_kelamin" class="form-control-label">Jenis Kelamin <span class="text-danger">*</span></label>
                                     <select class="form-control" id="jenis_kelamin" name="jenis_kelamin" value="{{ form.jenis_kelamin.value }}">
                                         <option value="" disabled selected hidden>Pilih</option>
-                                        <option value="l" {% if pasien.jenis_kelamin == "l" %}selected{% endif %}>Laki-laki</option>
-                                        <option value="p" {% if pasien.jenis_kelamin == "p" %}selected{% endif %}>Perempuan</option>
+                                        {% for key, label in jenis_kelamin_choices %}
+                                        <option value="{{ key }}" {% if pasien.jenis_kelamin == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                             </div>
@@ -143,8 +134,9 @@
                                 <div class="form-group">
                                     <label for="status" class="form-control-label">Status <span class="text-danger">*</span></label>
                                     <select class="form-control" id="status" name="status" required>
-                                        <option value="aktif" {% if pasien.status == "aktif" %}selected{% endif %}>Aktif</option>
-                                        <option value="nonaktif" {% if pasien.status == "nonaktif" %}selected{% endif %}>Tidak Aktif</option>
+                                        {% for key, label in status_choices %}
+                                        <option value="{{ key }}" {% if pasien.status == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                             </div>
@@ -185,13 +177,9 @@
                                     <label for="agama" class="form-control-label">Agama</label>
                                     <select class="form-control" id="agama" name="agama">
                                         <option value="" disabled selected hidden>Pilih</option>
-                                        <option value="islam" {% if pasien.agama == "islam" %}selected{% endif %}>Islam</option>
-                                        <option value="kristen_protestan" {% if pasien.agama == "kristen_protestan" %}selected{% endif %}>Kristen Protestan</option>
-                                        <option value="katolik" {% if pasien.agama == "katolik" %}selected{% endif %}>Katolik</option>
-                                        <option value="hindu" {% if pasien.agama == "hindu" %}selected{% endif %}>Hindu</option>
-                                        <option value="buddha" {% if pasien.agama == "buddha" %}selected{% endif %}>Buddha</option>
-                                        <option value="konghucu" {% if pasien.agama == "konghucu" %}selected{% endif %}>Konghucu</option>
-                                        <option value="kepercayaan_lain" {% if pasien.agama == "kepercayaan_lain" %}selected{% endif %}>Kepercayaan Lain</option>
+                                        {% for key, label in agama_choices %}
+                                        <option value="{{ key }}" {% if pasien.agama == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                             </div>
@@ -201,15 +189,9 @@
                                     <label for="pendidikan" class="form-control-label">Pendidikan</label>
                                     <select class="form-control" id="pendidikan" name="pendidikan">
                                         <option value="" disabled selected hidden>Pilih</option>
-                                        <option value="belum_sekolah" {% if pasien.pendidikan == "belum_sekolah" %}selected{% endif %}>Belum Sekolah</option>
-                                        <option value="sd" {% if pasien.pendidikan == "sd" %}selected{% endif %}>SD/Sederajat</option>
-                                        <option value="smp" {% if pasien.pendidikan == "smp" %}selected{% endif %}>SMP/Sederajat</option>
-                                        <option value="sma" {% if pasien.pendidikan == "sma" %}selected{% endif %}>SMA/Sederajat</option>
-                                        <option value="d3" {% if pasien.pendidikan == "d4" %}selected{% endif %}>Diploma 3 (D3)</option>
-                                        <option value="s1" {% if pasien.pendidikan == "s1" %}selected{% endif %}>Sarjana (S1)</option>
-                                        <option value="s2" {% if pasien.pendidikan == "s2" %}selected{% endif %}>Magister (S2)</option>
-                                        <option value="s3" {% if pasien.pendidikan == "s3" %}selected{% endif %}>Doktor (S3)</option>
-                                        <option value="lainnya" {% if pasien.pendidikan == "lainnya" %}selected{% endif %}>Lainnya</option>
+                                        {% for key, label in pendidikan_choices %}
+                                        <option value="{{ key }}" {% if pasien.pendidikan == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                             </div>
@@ -222,16 +204,9 @@
                                     <label for="pekerjaan" class="form-control-label">Pekerjaan</label>
                                     <select class="form-control" id="pekerjaan" name="pekerjaan">
                                         <option value="" disabled selected hidden>Pilih</option>
-                                         <option value="belum_kerja" {% if pasien.pekerjaan == "belum_kerja" %}selected{% endif %}>Belum Bekerja</option>
-                                         <option value="pelajar_mahasiswa" {% if pasien.pekerjaan == "pelajar_mahasiswa" %}selected{% endif %}>Pelajar/Mahasiswa</option>
-                                         <option value="ibu_rumah_tangga" {% if pasien.pekerjaan == "ibu_rumah_tangga" %}selected{% endif %}>Mengurus Rumah Tangga</option>
-                                         <option value="pensiunan" {% if pasien.pekerjaan == "pensiunan" %}selected{% endif %}>Pensiunan</option>
-                                         <option value="pns" {% if pasien.pekerjaan == "pns" %}selected{% endif %}>PNS</option>
-                                         <option value="tni_polri" {% if pasien.pekerjaan == "tni_polri" %}selected{% endif %}>TNI/Polri</option>
-                                         <option value="karyawan_swasta" {% if pasien.pekerjaan == "karyawan_swasta" %}selected{% endif %}>Karyawan Swasta</option>
-                                         <option value="karyawan_bumn" {% if pasien.pekerjaan == "karyawan_bumn" %}selected{% endif %}>Karyawan BUMN/BUMD</option>
-                                         <option value="pengusaha" {% if pasien.pekerjaan == "pengusaha" %}selected{% endif %}>Pengusaha</option>
-                                         <option value="lainnya" {% if pasien.pekerjaan == "lainnya" %}selected{% endif %}>Lainnya</option>
+                                        {% for key, label in pekerjaan_choices %}
+                                        <option value="{{ key }}" {% if pasien.pekerjaan == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                      </select>
                                 </div>
                             </div>
@@ -241,11 +216,9 @@
                                     <label for="status_pernikahan" class="form-control-label">Status Pernikahan</label>
                                     <select class="form-control" id="status_pernikahan" name="status_pernikahan">
                                         <option value="" disabled selected hidden>Pilih</option>
-                                        <option value="belum_nikah" {% if pasien.status_pernikahan == "belum_nikah" %}selected{% endif %}>Belum Nikah</option>
-                                        <option value="nikah" {% if pasien.status_pernikahan == "nikah" %}selected{% endif %}>Nikah</option>
-                                        <option value="cerai_hidup" {% if pasien.status_pernikahan == "cerai_hidup" %}selected{% endif %}>Cerai Hidup</option>
-                                        <option value="cerai_mati" {% if pasien.status_pernikahan == "cerai_mati" %}selected{% endif %}>Cerai Mati</option>
-                                        <option value="lainnya" {% if pasien.status_pernikahan == "lainnya" %}selected{% endif %}>Lainnya</option>
+                                        {% for key, label in status_pernikahan_choices %}
+                                        <option value="{{ key }}" {% if pasien.status_pernikahan == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                             </div>
@@ -262,8 +235,9 @@
                                     <label for="status_merokok" class="form-control-label">Status Merokok</label>
                                     <select class="form-control" id="status_merokok" name="status_merokok">
                                         <option value="" disabled selected hidden>Pilih</option>
-                                        <option value="tidak_merokok" {% if pasien.status_merokok == "tidak_merokok" %}selected{% endif %}>Tidak Merokok</option>
-                                        <option value="merokok" {% if pasien.status_merokok == "merokok" %}selected{% endif %}>Perokok</option>
+                                        {% for key, label in status_merokok_choices %}
+                                        <option value="{{ key }}" {% if pasien.status_merokok == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                             </div>
@@ -273,10 +247,9 @@
                                     <label for="golongan_darah" class="form-control-label">Golongan Darah</label>
                                     <select class="form-control" id="golongan_darah" name="golongan_darah">
                                         <option value="" disabled selected hidden>Pilih</option>
-                                        <option value="a" {% if pasien.golongan_darah == "a" %}selected{% endif %}>A</option>
-                                        <option value="b" {% if pasien.golongan_darah == "b" %}selected{% endif %}>B</option>
-                                        <option value="ab" {% if pasien.golongan_darah == "ab" %}selected{% endif %}>AB</option>
-                                        <option value="o" {% if pasien.golongan_darah == "o" %}selected{% endif %}>O</option>
+                                        {% for key, label in golongan_darah_choices %}
+                                        <option value="{{ key }}" {% if pasien.golongan_darah == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                             </div>
@@ -285,18 +258,21 @@
                 </div>
             </div>
         </div>
+        <!-- Kolom Button -->
         <div class="col-12 col-md-3">
-            <div class="card">
-                <div class="card-body">
-                    <!-- Tombol Simpan & Batal -->
-                    <div class="row">
-                        <div class="col-12">
-                            <button type="submit" form="formPasien" class="btn btn-primary btn-block">Simpan</button>
+            <div class="position-sticky" style="top: 1rem;">                
+                <div class="card">
+                    <div class="card-body">
+                        <!-- Tombol Simpan & Batal -->
+                        <div class="row">
+                            <div class="col-12">
+                                <button type="submit" form="formPasien" class="btn btn-primary btn-block">Simpan</button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mt-2">
-                        <div class="col-12">
-                            <a href="{% url 'daftar_pasien' %}" class="btn btn-outline-primary btn-block">Batal</a>
+                        <div class="row mt-2">
+                            <div class="col-12">
+                                <a href="{% url 'daftar_pasien' %}" class="btn btn-outline-primary btn-block">Batal</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -304,6 +280,7 @@
         </div>
     </div>
     <!-- End Form Tambah Pasien -->
+     
     <!-- Footer -->
     <footer class="footer pt-0">
         <div class="row align-items-center justify-content-lg-between">
