--- a/core/templates/core/pasien_tambah.html
+++ b/core/templates/core/pasien_tambah.html
@@ -4,7 +4,7 @@
 {% block title %}Tambahkan Pasien{% endblock %}
 
 {% block content %}
- <!-- Header -->
+<!-- Header -->
 <div class="header pb-6">
     <div class="container-fluid">
         <div class="header-body">
@@ -40,6 +40,7 @@
     </div>
 </div>
 <!-- End Header -->
+
 <!-- Page content -->
 <div class="container-fluid mt--6">
     <!-- Form Tambah Pasien -->
@@ -82,23 +83,13 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Nama Lengkap -->
+                        <!-- Nama Lengkap & NIK-->
                         <div class="row">
                             <!-- Nama Lengkap -->
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="nama_lengkap" class="form-control-label">Nama Lengkap <span class="text-danger">*</span></label>
                                     <input type="text" class="form-control" id="nama_lengkap" name="nama_lengkap" placeholder="Nama Lengkap" required>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- No. RM & NIK-->
-                        <div class="row">
-                            <!-- No. RM -->
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="no_rm" class="form-control-label">No. Rekam Medis <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" id="no_rm" name="no_rm" placeholder="Nomor Rekam Medis" required>
                                 </div>
                             </div>
                             <!-- NIK -->
@@ -131,8 +122,9 @@
                                     <label for="jenis_kelamin" class="form-control-label">Jenis Kelamin <span class="text-danger">*</span></label>
                                     <select class="form-control" id="jenis_kelamin" name="jenis_kelamin" required>
                                         <option value="" disabled selected hidden>Pilih</option>
-                                        <option value="l">Laki-laki</option>
-                                        <option value="p">Perempuan</option>
+                                        {% for key, label in jenis_kelamin_choices %}
+                                        <option value="{{ key }}" {% if form.jenis_kelamin.value == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                             </div>
@@ -144,8 +136,9 @@
                                 <div class="form-group">
                                     <label for="status" class="form-control-label">Status <span class="text-danger">*</span></label>
                                     <select class="form-control" id="status" name="status" required>
-                                        <option value="aktif">Aktif</option>
-                                        <option value="nonaktif">Tidak Aktif</option>
+                                        {% for key, label in status_choices %}
+                                        <option value="{{ key }}" {% if form.status.value == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                             </div>
@@ -154,7 +147,7 @@
                                 <div class="form-group">
                                     <label for="nomor_hp" class="form-control-label">Nomor telepon <span class="text-danger">*</span></label>
                                     <div class="input-group input-group-merge">
-                                        <input type="tel" class="form-control" pattern="08[0-9]{8,11}" id="nomor_hp" name="nomor_hp" placeholder="Nomor Telepon">
+                                        <input type="tel" class="form-control" pattern="08[0-9]{8,11}" id="nomor_hp" name="nomor_hp" maxlength="13" placeholder="Nomor Telepon">
                                         <div class="input-group-append">
                                             <span class="input-group-text text-default">
                                                 <i class="fa-solid fa-phone-flip text-muted"></i>
@@ -186,13 +179,9 @@
                                     <label for="agama" class="form-control-label">Agama</label>
                                     <select class="form-control" id="agama" name="agama">
                                         <option value="" disabled selected hidden>Pilih</option>
-                                        <option value="islam">Islam</option>
-                                        <option value="kristen_protestan">Kristen Protestan</option>
-                                        <option value="katolik">Katolik</option>
-                                        <option value="hindu">Hindu</option>
-                                        <option value="buddha">Buddha</option>
-                                        <option value="konghucu">Konghucu</option>
-                                        <option value="kepercayaan_lain">Kepercayaan Lain</option>
+                                        {% for key, label in agama_choices %}
+                                        <option value="{{ key }}" {% if form.agama.value == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                             </div>
@@ -202,15 +191,9 @@
                                     <label for="pendidikan" class="form-control-label">Pendidikan</label>
                                     <select class="form-control" id="pendidikan" name="pendidikan">
                                         <option value="" disabled selected hidden>Pilih</option>
-                                        <option value="belum_sekolah">Belum Sekolah</option>
-                                        <option value="sd">SD/Sederajat</option>
-                                        <option value="smp">SMP/Sederajat</option>
-                                        <option value="sma">SMA/Sederajat</option>
-                                        <option value="d3">Diploma 3 (D3)</option>
-                                        <option value="s1">Sarjana (S1)</option>
-                                        <option value="s2">Magister (S2)</option>
-                                        <option value="s3">Doktor (S3)</option>
-                                        <option value="lainnya">Lainnya</option>
+                                        {% for key, label in pendidikan_choices %}
+                                        <option value="{{ key }}" {% if form.pendidikan.value == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                             </div>
@@ -263,8 +246,9 @@
                                     <label for="status_merokok" class="form-control-label">Status Merokok</label>
                                     <select class="form-control" id="status_merokok" name="status_merokok">
                                         <option value="" disabled selected hidden>Pilih</option>
-                                        <option value="tidak_merokok">Tidak Merokok</option>
-                                        <option value="merokok">Perokok</option>
+                                        {% for key, label in status_merokok_choices %}
+                                        <option value="{{ key }}" {% if form.status_merokok.value == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                             </div>
@@ -274,10 +258,9 @@
                                     <label for="golongan_darah" class="form-control-label">Golongan Darah</label>
                                     <select class="form-control" id="golongan_darah" name="golongan_darah">
                                         <option value="" disabled selected hidden>Pilih</option>
-                                        <option value="a">A</option>
-                                        <option value="b">B</option>
-                                        <option value="ab">AB</option>
-                                        <option value="o">O</option>
+                                        {% for key, label in golongan_darah_choices %}
+                                        <option value="{{ key }}" {% if form.golongan_darah.value == key  %}selected{% endif %}>{{ label }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                             </div>
@@ -288,17 +271,19 @@
         </div>
         <!-- Kolom Button -->
         <div class="col-12 col-md-3">
-            <div class="card">
-                <div class="card-body">
-                    <!-- Tombol Simpan & Batal -->
-                    <div class="row">
-                        <div class="col-12">
-                            <button type="submit" form="formPasien" class="btn btn-primary btn-block">Simpan</button>
+            <div class="position-sticky" style="top: 1rem;">
+                <div class="card">
+                    <div class="card-body">
+                        <!-- Tombol Simpan & Batal -->
+                        <div class="row">
+                            <div class="col-12">
+                                <button type="submit" form="formPasien" class="btn btn-primary btn-block">Simpan</button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row mt-2">
-                        <div class="col-12">
-                            <a href="{% url 'daftar_pasien' %}" class="btn btn-outline-primary btn-block">Batal</a>
+                        <div class="row mt-2">
+                            <div class="col-12">
+                                <a href="{% url 'daftar_pasien' %}" class="btn btn-outline-primary btn-block">Batal</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -306,6 +291,7 @@
         </div>
     </div>
     <!-- End Form Tambah Pasien -->
+     
     <!-- Footer -->
     <footer class="footer pt-0">
         <div class="row align-items-center justify-content-lg-between">
